Fixed user actions alignment in Chrome.

--- a/assets/less/classes/header.less
+++ b/assets/less/classes/header.less
@@ -254,7 +254,7 @@
         &__actions {
             display: flex;
             flex-wrap: wrap;
-            justify-content: right;
+            justify-content: flex-end;
             list-style: none;
             max-width: 100px;
             font-size: .9em;
